# AIE-Rob

02_Embeddings_and_RAG/: CopyPythonic_RAG_Assignment copy.ipynb  Pythonic_RAG_Assignment.ipynb  test_pdf_support.py
02_Embeddings_and_RAG/aimakerspace/: text_utils.py
03_End-to-End_RAG/: FRONTEND_PLAN.md  RAG_README.md  api.py  app.py  config.py  index.html  pyproject.toml  rag_pipeline.py  requirements.txt  script.js  styles.css  test_name.py  vercel.json
03_End-to-End_RAG/aimakerspace/: text_utils.py
03_End-to-End_RAG/api/: app.py  index.py
03_End-to-End_RAG/frontend/: script.js
03_End-to-End_RAG/rag/: rag_pipeline.py  test_queries.py
